// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard > rendert die Kennzahlen unveraendert 1`] = `
<div
  class="mx-auto max-w-5xl space-y-6"
>
  <div
    class="flex items-center justify-between"
  >
    <h1
      class="text-2xl font-bold text-primary"
    >
      Übersicht
    </h1>
    <div
      class="flex items-center gap-2"
    >
      <a
        class="inline-flex items-center gap-2 rounded-lg border border-line bg-surface px-4 py-2 text-sm font-medium text-secondary hover:bg-elevated transition-colors"
        href="/steuer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
        GuV / EÜR
      </a>
      <a
        aria-label="Hilfe"
        class="inline-flex items-center justify-center rounded-lg border border-line bg-surface p-2 text-secondary hover:bg-elevated transition-colors"
        href="/hilfe"
        title="Hilfe"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-question-mark h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-2"
  >
    <button
      class="rounded-lg px-3 py-1.5 text-sm font-medium transition-colors bg-elevated text-faint hover:bg-hover hover:text-secondary"
    >
      Alle
    </button>
    <button
      class="rounded-lg px-3 py-1.5 text-sm font-medium transition-colors bg-brand-primary text-white"
    >
      2026
    </button>
  </div>
  <div
    class="grid grid-cols-1 gap-4 md:grid-cols-3"
  >
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
    >
      <p
        class="text-sm text-faint"
      >
        Umsatz
      </p>
      <p
        class="mt-1 text-2xl font-bold text-green-600"
      >
        €86,50
      </p>
    </div>
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
    >
      <p
        class="text-sm text-faint"
      >
        Ausgaben
      </p>
      <p
        class="mt-1 text-2xl font-bold text-brand-primary"
      >
        €77,00
      </p>
    </div>
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
    >
      <p
        class="text-sm text-faint"
      >
        Nettogewinn
      </p>
      <p
        class="mt-1 text-2xl font-bold text-green-600"
      >
        €9,50
      </p>
    </div>
  </div>
  <div
    class="grid grid-cols-3 gap-4"
  >
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm text-center"
    >
      <p
        class="text-2xl font-bold text-primary"
      >
        0
      </p>
      <p
        class="mt-0.5 text-xs text-muted"
      >
        Offene Aufträge
      </p>
    </div>
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm text-center"
    >
      <p
        class="text-2xl font-bold text-primary"
      >
        1
      </p>
      <p
        class="mt-0.5 text-xs text-muted"
      >
        Bezahlte Aufträge
      </p>
    </div>
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm text-center"
    >
      <p
        class="text-2xl font-bold text-primary"
      >
        1
      </p>
      <p
        class="mt-0.5 text-xs text-muted"
      >
        Märkte
      </p>
    </div>
  </div>
  <div
    class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
  >
    <h2
      class="mb-4 text-lg font-semibold text-primary"
    >
      Monatliche Entwicklung
    </h2>
    <div
      class="mb-6 text-muted"
    />
    <div
      class="overflow-x-auto"
    >
      <table
        class="w-full text-sm"
      >
        <thead>
          <tr
            class="border-b border-line text-left text-muted"
          >
            <th
              class="pb-2 pr-4 font-medium"
            >
              Monat
            </th>
            <th
              class="pb-2 pr-4 text-right font-medium"
            >
              Umsatz
            </th>
            <th
              class="pb-2 pr-4 text-right font-medium"
            >
              Ausgaben
            </th>
            <th
              class="pb-2 text-right font-medium"
            >
              Nettogewinn
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-line-subtle last:border-0"
          >
            <td
              class="py-2.5 pr-4 text-secondary"
            >
              Mär
               
              2026
            </td>
            <td
              class="py-2.5 pr-4 text-right text-green-600"
            >
              €86,50
            </td>
            <td
              class="py-2.5 pr-4 text-right text-brand-primary"
            >
              €77,00
            </td>
            <td
              class="py-2.5 text-right font-medium text-green-600"
            >
              €9,50
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
  >
    <h2
      class="mb-4 text-lg font-semibold text-primary"
    >
      Gewinn je Markt
    </h2>
    <div
      class="space-y-3"
    >
      <div>
        <div
          class="mb-1 flex items-center justify-between text-sm"
        >
          <span
            class="truncate pr-2 text-secondary"
          >
            Frühlingsmarkt
          </span>
          <span
            class="shrink-0 font-medium text-green-600"
          >
            €7,00
          </span>
        </div>
        <div
          class="h-2 overflow-hidden rounded-full bg-elevated"
        >
          <div
            class="h-full rounded-full bg-green-500"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`expenses — Liste > rendert Ausgaben inklusive abgeleiteter Marktkosten 1`] = `
<div
  class="mx-auto max-w-2xl space-y-6"
>
  <div
    class="flex items-center justify-between"
  >
    <h1
      class="text-2xl font-bold text-primary"
    >
      Ausgaben
    </h1>
    <button
      class="inline-flex items-center gap-2 rounded-lg bg-brand-primary px-4 py-2 text-sm font-medium text-white hover:bg-brand-primary/90 transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
      Neue Ausgabe
    </button>
  </div>
  <div
    class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm "
  >
    <div
      class="flex items-center justify-between"
    >
      <p
        class="text-sm text-faint"
      >
        Gesamt
         
        2026
      </p>
      <p
        class="text-2xl font-bold text-brand-primary"
      >
        €77,00
      </p>
    </div>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm flex items-center justify-between gap-4"
    >
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <h3
            class="font-medium text-primary truncate"
          >
            Ton, 25 kg
          </h3>
          <span
            class="inline-flex items-center rounded-full border px-2 py-0.5 text-xs font-medium bg-zinc-500/10 text-zinc-400 border-zinc-500/20"
          >
            Sonstiges
          </span>
        </div>
        <p
          class="mt-0.5 text-xs text-muted"
        >
          2.3.2026
        </p>
      </div>
      <div
        class="flex items-center gap-3 shrink-0"
      >
        <p
          class="text-sm font-semibold text-brand-primary"
        >
          €32,00
        </p>
        <button
          aria-label="Ausgabe löschen"
          class="rounded-lg p-1.5 text-muted hover:text-red-400 hover:bg-elevated transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm flex items-center justify-between gap-4"
    >
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <h3
            class="font-medium text-primary truncate"
          >
            Standgebühr – Frühlingsmarkt
          </h3>
          <span
            class="inline-flex items-center rounded-full border px-2 py-0.5 text-xs font-medium bg-orange-500/10 text-orange-400 border-orange-500/20"
          >
            Standgebühren / Raumkosten
          </span>
          <a
            class="inline-flex items-center gap-1 rounded-full border border-line px-2 py-0.5 text-xs text-muted hover:text-secondary hover:bg-elevated transition-colors"
            href="/markets/market-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-store h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-5a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v5"
              />
              <path
                d="M17.774 10.31a1.12 1.12 0 0 0-1.549 0 2.5 2.5 0 0 1-3.451 0 1.12 1.12 0 0 0-1.548 0 2.5 2.5 0 0 1-3.452 0 1.12 1.12 0 0 0-1.549 0 2.5 2.5 0 0 1-3.77-3.248l2.889-4.184A2 2 0 0 1 7 2h10a2 2 0 0 1 1.653.873l2.895 4.192a2.5 2.5 0 0 1-3.774 3.244"
              />
              <path
                d="M4 10.95V19a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8.05"
              />
            </svg>
            aus Markt: Frühlingsmarkt
          </a>
        </div>
        <p
          class="mt-0.5 text-xs text-muted"
        >
          14.3.2026
        </p>
      </div>
      <div
        class="flex items-center gap-3 shrink-0"
      >
        <p
          class="text-sm font-semibold text-brand-primary"
        >
          €45,00
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`markets — Liste > rendert die Marktliste unveraendert 1`] = `
<div
  class="mx-auto max-w-2xl space-y-6"
>
  <div
    class="flex items-center justify-between"
  >
    <h1
      class="text-2xl font-bold text-primary"
    >
      Märkte
    </h1>
    <a
      class="inline-flex items-center gap-2 rounded-lg bg-brand-primary px-4 py-2 text-sm font-medium text-white hover:bg-brand-primary/90 transition-colors"
      href="/markets/new"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
      Neuer Markt
    </a>
  </div>
  <div
    class="relative"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <input
      class="w-full rounded-xl border border-line bg-input pl-10 pr-4 py-2.5 text-sm text-primary placeholder-holder focus:border-brand-primary focus:outline-none focus:ring-1 focus:ring-brand-primary transition-colors"
      placeholder="Suchen..."
      type="text"
      value=""
    />
  </div>
  <div
    class="space-y-6"
  >
    <section
      class="space-y-3"
    >
      <h2
        class="text-xs font-semibold uppercase tracking-wider text-faint"
      >
        Vergangen
      </h2>
      <a
        href="/markets/market-1"
      >
        <div
          class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm hover:border-line-hover transition-colors cursor-pointer"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-center gap-2"
              >
                <h3
                  class="font-semibold text-primary truncate"
                >
                  Frühlingsmarkt
                </h3>
                <span
                  class="shrink-0 rounded-full px-2 py-0.5 text-[11px] font-medium bg-green-500/10 text-green-600"
                >
                  Zugesagt
                </span>
              </div>
              <div
                class="mt-1 flex flex-wrap items-center gap-x-4 gap-y-1 text-sm text-faint"
              >
                <span
                  class="inline-flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  14.3.2026
                </span>
                <span
                  class="inline-flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  Marktplatz Musterstadt
                </span>
              </div>
              <span
                class="mt-1.5 inline-flex items-center gap-1 rounded-md px-1.5 py-0.5 text-xs font-medium text-faint"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-alarm-clock h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="13"
                    r="8"
                  />
                  <path
                    d="M12 9v4l2 2"
                  />
                  <path
                    d="M5 3 2 6"
                  />
                  <path
                    d="m22 6-3-3"
                  />
                  <path
                    d="M6.38 18.7 4 21"
                  />
                  <path
                    d="M17.64 18.67 20 21"
                  />
                </svg>
                Frist
                :
                 
                1.2.2026
                 (in -42 T.)
              </span>
            </div>
            <div
              class="shrink-0 text-right"
            >
              <p
                class="text-sm text-faint"
              >
                Verkäufe
                : 
                €52,00
              </p>
              <p
                class="text-sm font-semibold text-brand-primary"
              >
                Gewinn
                : 
                €-5,00
              </p>
            </div>
          </div>
        </div>
      </a>
    </section>
  </div>
</div>
`;

exports[`orders — Liste > rendert die Auftragsliste unveraendert 1`] = `
<div
  class="mx-auto max-w-2xl space-y-6"
>
  <div
    class="flex items-center justify-between"
  >
    <h1
      class="text-2xl font-bold text-primary"
    >
      Aufträge
    </h1>
    <a
      class="inline-flex items-center gap-2 rounded-lg bg-brand-primary px-4 py-2 text-sm font-medium text-white hover:bg-brand-primary/90 transition-colors"
      href="/orders/new"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
      Neuer Auftrag
    </a>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="relative"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        class="w-full rounded-xl border border-line bg-input pl-10 pr-4 py-2.5 text-sm text-primary placeholder-holder focus:border-brand-primary focus:outline-none focus:ring-1 focus:ring-brand-primary transition-colors"
        placeholder="Suchen..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex gap-2 overflow-x-auto pb-1"
    >
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-brand-primary text-white"
      >
        Alle
      </button>
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-elevated text-muted hover:text-primary"
      >
        Offen
      </button>
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-elevated text-muted hover:text-primary"
      >
        Bezahlt
      </button>
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-elevated text-muted hover:text-primary"
      >
        Versendet
      </button>
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-elevated text-muted hover:text-primary"
      >
        Geliefert
      </button>
      <button
        class="shrink-0 rounded-lg px-3 py-1.5 text-xs font-medium transition-colors bg-elevated text-muted hover:text-primary"
      >
        Storniert
      </button>
    </div>
  </div>
  <div
    class="space-y-3"
  >
    <a
      href="/orders/order-1"
    >
      <div
        class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm hover:border-line-hover transition-colors cursor-pointer"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <h3
                class="font-semibold text-primary truncate"
              >
                Anna Beispiel
              </h3>
              <span
                class="inline-flex items-center rounded-lg border px-2.5 py-0.5 text-xs font-medium bg-orange-100 text-orange-800 border-orange-200"
              >
                Offen
              </span>
            </div>
            <div
              class="mt-1 flex flex-wrap items-center gap-x-4 gap-y-1 text-sm text-faint"
            >
              <span
                class="inline-flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
                1.3.2026
              </span>
              <span
                class="inline-flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-package h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                  />
                  <path
                    d="M12 22V12"
                  />
                  <polyline
                    points="3.29 7 12 12 20.71 7"
                  />
                  <path
                    d="m7.5 4.27 9 5.15"
                  />
                </svg>
                2
                 
                Artikel
              </span>
            </div>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <p
              class="text-sm font-semibold text-green-600"
            >
              €34,50
            </p>
          </div>
        </div>
      </div>
    </a>
    <a
      href="/orders/order-2"
    >
      <div
        class="bg-surface rounded-2xl p-4 border border-black/12 dark:border-white/10 shadow-sm hover:border-line-hover transition-colors cursor-pointer"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <h3
                class="font-semibold text-primary truncate"
              >
                Anna Beispiel
              </h3>
              <span
                class="inline-flex items-center rounded-lg border px-2.5 py-0.5 text-xs font-medium bg-green-100 text-green-800 border-green-200"
              >
                Bezahlt
              </span>
            </div>
            <div
              class="mt-1 flex flex-wrap items-center gap-x-4 gap-y-1 text-sm text-faint"
            >
              <span
                class="inline-flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
                1.3.2026
              </span>
              <span
                class="inline-flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-package h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                  />
                  <path
                    d="M12 22V12"
                  />
                  <polyline
                    points="3.29 7 12 12 20.71 7"
                  />
                  <path
                    d="m7.5 4.27 9 5.15"
                  />
                </svg>
                2
                 
                Artikel
              </span>
            </div>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <p
              class="text-sm font-semibold text-green-600"
            >
              €34,50
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;
